<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.header.EditProfileActivity"
    android:orientation="vertical"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="125dp"
                    android:id="@+id/view"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:cardCornerRadius="75dp"
                    android:layout_marginTop="50dp"
                    android:id="@+id/edt_profile_pic"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/dp2"
                        android:id="@+id/profile_pic"
                        android:scaleType="fitXY"/>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:cardCornerRadius="20dp"
                    android:layout_marginTop="35dp"
                    android:id="@+id/edit_profile_pic"
                    android:layout_marginStart="120dp"
                    app:layout_constraintTop_toBottomOf="@id/view"
                    app:cardBackgroundColor="@android:color/darker_gray"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/camera"/>
                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/first_name"
                    android:textColor="@color/red"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".4"
                    android:layout_marginStart="10dp"
                    android:text="@string/last_name"
                    android:textSize="18sp"
                    android:textColor="@color/red"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="10dp"
                android:weightSum="1">

                <EditText
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:backgroundTint="@color/black"
                    android:hint="@string/mayank"
                    android:id="@+id/firstname"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".4"
                    android:hint="@string/ingle"
                    android:id="@+id/lastname"
                    android:layout_marginStart="30dp"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address_line1"
                    android:textSize="18sp"
                    android:textColor="@color/red"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp">
                </TextView>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter address lin1"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:id="@+id/edt_add1"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/black">
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Address Line2"
                    android:textSize="18sp"
                    android:textColor="@color/red"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp">
                </TextView>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter address lin2"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:id="@+id/edt_add2"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/black">
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="City"
                    android:textSize="18dp"
                    android:textColor="@color/red"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp">
                </TextView>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Vadodara"
                    android:id="@+id/edt_city"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/black">
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="State"
                    android:textSize="18sp"
                    android:textColor="@color/red"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp">
                </TextView>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Gujarat"
                    android:id="@+id/edt_State"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/black">
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Zipcode"
                    android:textSize="18sp"
                    android:textColor="@color/red"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp">
                </TextView>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="390023"
                    android:id="@+id/edt_zipcode"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/black">
                </EditText>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_ep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/red"
        android:text="Save"
        android:layout_marginTop="15dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp"
        tools:ignore="HardcodedText" />
</LinearLayout>